--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^11.11.0",
     "fs-extra": "^11.1.1",
     "inquirer": "^9.2.12",
+    "jsonwebtoken": "^9.0.2",
     "ora": "^5.4.1"
   },
   "devDependencies": {
